# src/main/java/net/keksipurkki/petstore/api/Api.java
@@ -1,18 +1,23 @@
 package net.keksipurkki.petstore.api;
 
 import io.vertx.core.Future;
+import net.keksipurkki.petstore.http.ForbiddenException;
 import net.keksipurkki.petstore.http.NotFoundException;
 import net.keksipurkki.petstore.http.NotImplementedException;
-import net.keksipurkki.petstore.model.AccessToken;
-import net.keksipurkki.petstore.model.User;
-import net.keksipurkki.petstore.model.UserException;
 import net.keksipurkki.petstore.security.JwtPrincipal;
 import net.keksipurkki.petstore.security.SecurityContext;
-import net.keksipurkki.petstore.service.Users;
+import net.keksipurkki.petstore.store.Inventory;
+import net.keksipurkki.petstore.store.NewOrder;
+import net.keksipurkki.petstore.store.Order;
+import net.keksipurkki.petstore.store.Orders;
 import net.keksipurkki.petstore.support.Futures;
+import net.keksipurkki.petstore.user.AccessToken;
+import net.keksipurkki.petstore.user.User;
+import net.keksipurkki.petstore.user.UserException;
+import net.keksipurkki.petstore.user.Users;
 
-import javax.ws.rs.ForbiddenException;
 import java.util.List;
+import java.util.Map;
 
 import static java.util.Objects.requireNonNull;
 
@@ -20,6 +25,7 @@ public class Api implements ApiContract {
 
     private Users users;
     private SecurityContext context;
+    private Orders orders;
 
     @Override
     public Future<ApiMessage> createUser(User data) {
@@ -90,9 +96,39 @@ public class Api implements ApiContract {
         throw new NotImplementedException();
     }
 
-    public Api withUserService(Users users) {
+    @Override
+    public Future<Map<Inventory, Integer>> getInventory() {
+        return orders.getInventory();
+    }
+
+    @Override
+    public Future<Order> placeOrder(NewOrder newOrder) {
+        return orders.place(newOrder);
+    }
+
+    @Override
+    public Future<Order> getOrderById(int orderId) {
+        return orders.getById(orderId)
+            .map(opt -> opt.orElseThrow(() -> new NotFoundException("Order " + orderId + " does not exist")));
+    }
+
+    @Override
+    public Future<Order> deleteOrder(int orderId) {
+        throw new NotImplementedException();
+    }
+
+    public Api withUsers(Users users) {
         var clone = new Api();
         clone.users = requireNonNull(users, "Users service must be defined");
+        clone.orders = orders;
+        clone.context = context;
+        return clone;
+    }
+
+    public Api withOrders(Orders orders) {
+        var clone = new Api();
+        clone.orders = requireNonNull(orders, "Orders service must be defined");
+        clone.users = users;
         clone.context = context;
         return clone;
     }
@@ -100,6 +136,7 @@ public class Api implements ApiContract {
     public Api withSecurityContext(SecurityContext context) {
         var clone = new Api();
         clone.users = users;
+        clone.orders = orders;
         clone.context = context;
         return clone;
     }
