# src/main/resources/api.yaml
@@ -4,7 +4,7 @@ info:
   description: |2+
 
     Sample implementation of a REST API demonstrating
-    lessons learned about microservice development.
+    lessons learned about backend development.
 
     Powered by Eclipse Vert.x — https://vertx.io
 
@@ -29,7 +29,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserData'
+              $ref: '#/components/schemas/User'
       responses:
         default:
           description: default response
@@ -50,7 +50,7 @@ paths:
             schema:
               type: array
               items:
-                $ref: '#/components/schemas/UserData'
+                $ref: '#/components/schemas/User'
       responses:
         default:
           description: default response
@@ -60,6 +60,47 @@ paths:
                 $ref: '#/components/schemas/ApiMessage'
       security:
       - NONE: []
+  /store/order/{orderId}:
+    get:
+      tags:
+      - store
+      operationId: GET_ORDER
+      parameters:
+      - name: orderId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
+      responses:
+        default:
+          description: default response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'
+      security:
+      - LOGIN_SESSION: []
+    delete:
+      tags:
+      - store
+      operationId: DELETE_ORDER
+      parameters:
+      - name: orderId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int32
+      responses:
+        default:
+          description: default response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'
+      security:
+      - LOGIN_SESSION: []
   /user/{username}:
     get:
       tags:
@@ -94,7 +135,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserData'
+              $ref: '#/components/schemas/User'
       responses:
         default:
           description: default response
@@ -123,6 +164,23 @@ paths:
                 $ref: '#/components/schemas/ApiMessage'
       security:
       - LOGIN_SESSION: []
+  /store/inventory:
+    get:
+      tags:
+      - store
+      operationId: GET_INVENTORY
+      responses:
+        default:
+          description: default response
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties:
+                  type: integer
+                  format: int32
+      security:
+      - NONE: []
   /user/login:
     get:
       tags:
@@ -160,6 +218,25 @@ paths:
                 $ref: '#/components/schemas/ApiMessage'
       security:
       - LOGIN_SESSION: []
+  /store/order:
+    post:
+      tags:
+      - store
+      operationId: PLACE_ORDER
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewOrder'
+      responses:
+        default:
+          description: default response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Order'
+      security:
+      - LOGIN_SESSION: []
 components:
   schemas:
     ApiMessage:
@@ -167,15 +244,19 @@ components:
       properties:
         message:
           type: string
-    UserData:
+    User:
       required:
       - email
       - firstName
+      - id
       - lastName
       - password
       - username
       type: object
       properties:
+        id:
+          type: integer
+          format: int32
         username:
           type: string
         firstName:
@@ -189,16 +270,34 @@ components:
         phone:
           type: string
       description: User data
-    User:
+    Order:
       type: object
       properties:
-        data:
-          $ref: '#/components/schemas/UserData'
+        petId:
+          type: integer
+          format: int32
+        quantity:
+          type: integer
+          format: int32
+        shipDate:
+          type: string
+          format: date-time
+        status:
+          type: string
     AccessToken:
       type: object
       properties:
         token:
           type: string
+    NewOrder:
+      type: object
+      properties:
+        petId:
+          type: integer
+          format: int32
+        quantity:
+          type: integer
+          format: int32
   securitySchemes:
     LOGIN_SESSION:
       type: http
